# approval-maze

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scenarios/: enterprise_demo.md
src/approval_maze/: __init__.py  __main__.py  cli.py  des.py  engine.py  roles.py  scenario.py  tools.py  tui.py
src/approval_maze/data/: enterprise_demo.json
tests/: test_des.py  test_gates.py  test_scenario.py
