[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "approval-maze"
version = "0.1.0"
description = "JP enterprise approval gates as a discrete-event maze for agent tool-calls"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Takeru Kondo" }]
keywords = ["agent", "hitl", "approval", "des", "japan-enterprise"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8.0"]

[project.scripts]
approval-maze = "approval_maze.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
approval_maze = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
